PIC-2602 refactor handler and add test

--- a/server/views/components/search/template.njk
+++ b/server/views/components/search/template.njk
@@ -4,7 +4,7 @@
         <div class="search-group">
             <label class="govuk-label govuk-!-margin-bottom-3" for="one-third">Enter the CRN or the name of the case you are searching for</label>
             <input class="govuk-input govuk-!-width-one-third" id="search-term" name="crn" type="text" value="{{ params.crn }}">
-            <button class="govuk-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" value="search" type="submit" name="search-list">Search</button>
+            <button class="govuk-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" type="submit" name="search-list">Search</button>
         </div>
     </form>
 </section>
