--- a/server/views/components/filter/template.njk
+++ b/server/views/components/filter/template.njk
@@ -1,6 +1,6 @@
 {%- set formName = params.formName or 'pacFilterForm' -%}
 
-<section class="pac-filter-card govuk-!-margin-bottom-6">
+<section class="pac-filter-card govuk-!-margin-bottom-6" data-test="pac-filter-card">
     <form name="pac-filter-form" id="pac-filter-form" method="post">
 
         <h2 class="govuk-heading-s">Filters</h2>
