PIC-2557 update with common search endpoint

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -205,6 +205,7 @@
         {%- from "components/search/macro.njk" import pacSearch -%}
         {{ pacSearch({
             search: search,
+            term: data.term,
             courtCode: params.courtCode
         }) }}
     {% endif %}
