--- a/server/views/case-search.njk
+++ b/server/views/case-search.njk
@@ -49,11 +49,11 @@
     {%- from "components/search/macro.njk" import pacSearch -%}
     {{ pacSearch({
         search: search,
-        crn: data.crn,
+        term: data.term,
         courtCode: data.params.courtCode
     }) }}
 
-    <h3 class="govuk-heading-m">&ldquo;{{ data.items | length }}&rdquo; search results for &ldquo;{{ data.crn }}&rdquo;</h3>
+    <h3 class="govuk-heading-m">{{ data.items | length }} search results for &ldquo;{{ data.term }}&rdquo;</h3>
     {% if data.items | length %}
         {% block table %}
             {%- from "govuk/components/table/macro.njk" import govukTable -%}
