--- a/server/views/components/search/template.njk
+++ b/server/views/components/search/template.njk
@@ -3,8 +3,8 @@
     <form name="pac-search-form" id="pac-search-form" method="get" action="/case-search">
         <div class="search-group">
             <label class="govuk-label govuk-!-margin-bottom-3" for="search-term">Enter the CRN or the name of the case you are searching for</label>
-            <input class="govuk-input govuk-!-width-one-third" id="search-term" name="crn" type="text" value="{{ params.crn }}">
-            <button class="govuk-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" type="submit" name="search-list">Search</button>
+            <input class="govuk-input govuk-!-width-one-third" id="search-term" name="term" type="text" value="{{ params.term }}">
+            <button class="govuk-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" type="submit">Search</button>
         </div>
     </form>
 </section>
