PIC-2887 derive and pass search type

--- a/server/views/case-search.njk
+++ b/server/views/case-search.njk
@@ -53,7 +53,7 @@
         courtCode: data.params.courtCode
     }) }}
 
-    <h3 class="govuk-heading-m">{{ data.items | length }} search results for &ldquo;{{ data.term }}&rdquo;</h3>
+    <h3 class="govuk-heading-m">{{ data.items | length }} search results for {{ data.term }}</h3>
     {% if data.items | length %}
         {% block table %}
             {%- from "govuk/components/table/macro.njk" import govukTable -%}
