--- a/server/views/components/search/template.njk
+++ b/server/views/components/search/template.njk
@@ -2,7 +2,7 @@
     <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Search</h2>
     <form name="pac-search-form" id="pac-search-form" method="get" action="/case-search">
         <div class="search-group">
-            <label class="govuk-label govuk-!-margin-bottom-3" for="search-term">Enter the CRN or the name of the case you are searching for</label>
+            <label class="govuk-label govuk-!-margin-bottom-3" for="search-term">Enter CRN or defendant name.</label>
             <input class="govuk-input govuk-!-width-one-third" id="search-term" name="term" type="text" value="{{ params.term }}">
             <button class="govuk-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" type="submit">Search</button>
         </div>
