PIC-2887 derive and pass search type

--- a/server/views/case-search.njk
+++ b/server/views/case-search.njk
@@ -32,13 +32,14 @@
         {% set defendantFullName = item.defendantName %}
         {% set a11yTitle = 'View case for defendant ' + defendantFullName | escape | apostropheInName | properCase | removeTitle %}
         {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
+        {% set noRecordDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">No record</div>' %}
 
         {%- set tableRow = [
             { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
             { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + ('<span class="moj-badge moj-badge--black pac-badge">Psr</span>' | safe if item.awaitingPsr) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate, 'YYYY-MM-DD').format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate and item.probationStatus == 'Previously known')) | safe },
             { text: offences | join('') | safe },
-            { text: (((item.lastHearingDate | caseSearchDateFormat ) + '<br>' + item.lastHearingCourt ) | safe ) if item.lastHearingDate else '' },
-            { text: (((item.nextHearingDate | caseSearchDateFormat)  + '<br>' + item.nextHearingCourt ) | safe ) if item.nextHearingDate else '' }
+            { text: (((item.lastHearingDate | caseSearchDateFormat ) + '<br>' + item.lastHearingCourt ) | safe ) if item.lastHearingDate else noRecordDisplay | safe },
+            { text: (((item.nextHearingDate | caseSearchDateFormat)  + '<br>' + item.nextHearingCourt ) | safe ) if item.nextHearingDate else noRecordDisplay | safe }
         ] -%}
         {{ tableData.rows.push(tableRow) }}
 
@@ -53,7 +54,7 @@
         courtCode: data.params.courtCode
     }) }}
 
-    <h3 class="govuk-heading-m">{{ data.items | length }} search results for &ldquo;{{ data.term }}&rdquo;</h3>
+    <h3 class="govuk-heading-m">{{ data.items | length }} search results for {{ data.term }}</h3>
     {% if data.items | length %}
         {% block table %}
             {%- from "govuk/components/table/macro.njk" import govukTable -%}
