PIC-2877 add Cancel link to discard hearing note draft

--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -66,8 +66,8 @@
                                 <span class="govuk-details__summary-text">Add a note</span>
                             </summary>
                             <div class="govuk-details__text govuk-!-padding-bottom-0">
-                                <label class="govuk-label" for="note-box-{{ params.hearing.hearingId }}" type="hidden">Add
-                                    note</label>
+                                <input type="hidden" name="hearingId" value="{{ params.hearing.hearingId }}"/>
+                                <label class="govuk-label" for="note-box-{{ params.hearing.hearingId }}" type="hidden">Add note</label>
                                 <textarea data-hearingid="{{ params.hearing.hearingId }}"
                                         class="govuk-textarea case-notes auto-save-text"
                                         id="note-box-{{ params.hearing.hearingId }}" name="note" rows="5"
@@ -75,7 +75,8 @@
                                 <button class="govuk-button case-comments-save-button" type="submit" data-module="govuk-button">
                                     Save
                                 </button>
-                                <input type="hidden" name="hearingId" value="{{ params.hearing.hearingId }}"/>
+                                <a class="govuk-link govuk-!-margin-left-5 note-draft-cancel-link govuk-!-text-align-centre"
+                                   href="summary/notes/{{ params.hearing.hearingId }}/cancel-draft-note">Cancel</a>
                             </div>
                         </details>
                     </form>
