🔧 Update AppInsights config

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -35,7 +35,10 @@
           src: "https://js.monitor.azure.com/scripts/b/ai.2.min.js", // The SDK URL Source
           crossOrigin: "anonymous", // When supplied this will add the provided value as the cross origin attribute on the script tag
           cfg: { // Application Insights Configuration
-            instrumentationKey:"{{ instrumentationKey }}"
+            instrumentationKey:"{{ instrumentationKey }}",
+            ingestionendpoint: 'https://northeurope-0.in.applicationinsights.azure.com/',
+            liveendpoint: 'https://northeurope.livediagnostics.monitor.azure.com/',
+            autoTrackPageVisitTime: true
           }});
         </script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
