--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -72,11 +72,13 @@
                                         class="govuk-textarea case-notes auto-save-text"
                                         id="note-box-{{ params.hearing.hearingId }}" name="note" rows="5"
                                         aria-describedby="note-box">{{ draftNote }}</textarea>
-                                <button class="govuk-button case-comments-save-button" type="submit" data-module="govuk-button">
-                                    Save
-                                </button>
-                                <a class="govuk-link govuk-!-margin-left-5 note-draft-cancel-link govuk-!-text-align-centre"
-                                   href="summary/notes/{{ params.hearing.hearingId }}/cancel-draft-note">Cancel</a>
+                                <div class="govuk-button-group">
+                                    <button class="govuk-button case-comments-save-button" type="submit" data-module="govuk-button">
+                                        Save
+                                    </button>
+                                    <a class="govuk-link note-draft-cancel-link"
+                                    href="summary/notes/{{ params.hearing.hearingId }}/cancel-draft-note">Cancel</a>
+                                </div>
                             </div>
                         </details>
                     </form>
